--- a/Views/SalarieView.axaml
+++ b/Views/SalarieView.axaml
@@ -26,9 +26,9 @@
                     Orientation="Horizontal" Spacing="12"
                     HorizontalAlignment="Center">
 
-            <Button Content="Ajouter" Command="{Binding OpenAddSalarieCommand}"/>
-            <Button Content="Confirmer" Command="{Binding ConfirmChangesCommand}"/>
-            <Button Content="Annuler" Command="{Binding CancelChangesCommand}"/>
+            <Button Content="Ajouter"   Command="{Binding OpenAddSalarieCommand}" IsVisible="{Binding Connected}"/>
+            <Button Content="Confirmer" Command="{Binding ConfirmChangesCommand}" IsVisible="{Binding Connected}"/>
+            <Button Content="Annuler"   Command="{Binding ResetFilterCommand}"  IsVisible="{Binding Connected}"/>
         </StackPanel>
 
         <StackPanel Margin="5,5"
@@ -49,7 +49,7 @@
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <DataGrid ItemsSource="{Binding PageSalaries, Mode=TwoWay}" 
                       AutoGenerateColumns="False" 
-                      IsReadOnly="False" 
+                      IsReadOnly="{Binding NotConnected}" 
                       GridLinesVisibility="All" 
                       BorderThickness="1" 
                       BorderBrush="Gray"
@@ -89,7 +89,7 @@
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
 
-                    <DataGridTemplateColumn Header="Suppression">
+                    <DataGridTemplateColumn Header="Suppression" IsVisible="{Binding Connected}">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <Button Name="deleteButton" Content="X" Click="DeleteButton_Click"  VerticalAlignment="Center" HorizontalAlignment="Center"/>         
