--- a/Views/SecretLoginView.axaml
+++ b/Views/SecretLoginView.axaml
@@ -11,10 +11,11 @@
                     Orientation="Horizontal" Spacing="12"
                     HorizontalAlignment="Center">
 
-            <TextBox Width="130" Height="30" PasswordChar="*" Text="{Binding InputPassword, Mode=TwoWay}" Watermark="Mot de passe" AcceptsReturn="False"/>
+            <TextBox Width="130" Height="30" PasswordChar="*" Text="{Binding InputPassword, Mode=TwoWay}" Watermark="Mot de passe" AcceptsReturn="False" IsVisible="{Binding NotConnected}" />
         
                
-            <Button Content="Connexion" Command="{Binding LoginCommand}"/>
+            <Button Content="Connexion" Command="{Binding LoginCommand}" IsVisible="{Binding NotConnected}" />
+		   <Button Content="Déconnexion" Command="{Binding LogoutCommand}" IsVisible="{Binding Connected}"/>
 
     </StackPanel>
 
